Correcion ortografica, se agrego lo de la wiki de diseño arquitectonico

--- a/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
@@ -22,9 +22,132 @@ Un patrón arquitectónico se define como una solución reutilizable a un proble
 2. **Vista**: Es la capa encargada de producir la visualización de la interfaz de usuario, basándose en los datos proveídos por el modelo.
 3. **Controlador**: Es el enlace entre el Modelo y la Vista, se encarga de realizar las peticiones de los datos al modelo para luego enviarlos a la Vista y finalmente retornar esa la visualización al usuario.
 
-Como este patrón arquitectónico, existen muchos otros más, tales como la arquitectura basada en capas, cliente-servidor, basada en repositorios, entro otros. A grandes rasgos los patrones arquitectónico se pueden clasificar en 4 categorías principales:
+Como este patrón arquitectónico, existen muchos otros más, tales como la arquitectura basada en capas, cliente-servidor, basada en repositorios, entre otros. A grandes rasgos los patrones arquitectónico se pueden clasificar en 4 categorías principales:
 
 - **From Mud to Structure**: Los patrones en esta categoría en particular, apoyan una descomposición controlada de la tarea general del sistema en subtareas cooperativas. Esta categoría incluye el patrón por capas, el patrón tuberías y filtros y el patrón de pizarra.
-- **Sistemas Distribuidos**: Esta categoría incluye al patron Broker, y se refiere a dos patrones en otras categorías como lo son Microkernel y tuberías y filtros. El patrón Broker proporciona una infraestructura completa para aplicaciones distribuidas. Los patrones Microkernel y Tuberías y Filtros solo consideran la distribución como una preocupación secundaria y, por lo tanto, se listan bajo sus respectivas categorías principales.
+- **Sistemas Distribuidos**: Esta categoría incluye al patrón Broker, y se refiere a dos patrones en otras categorías como lo son Microkernel y tuberías y filtros. El patrón Broker proporciona una infraestructura completa para aplicaciones distribuidas. Los patrones Microkernel y Tuberías y Filtros solo consideran la distribución como una preocupación secundaria y, por lo tanto, se listan bajo sus respectivas categorías principales.
 - **Sistemas Interactivos**: Esta categoría comprende dos patrones principales el patrón Modelo-Vista-Controlador (MVC) y el patrón Presentación-Abstracción-Control (PAC). Ambos apoyan la estructuración de sistemas de software que presentan interacción humano-computadora.
 - **Sistemas Adaptables**: El patrón Reflexión y el patrón Microkernel apoyan fuertemente la extensión de aplicaciones y su adaptación a la evolución de la tecnología y los requisitos funcionales cambiantes.
+
+**Según la wiki que hicimos, pasado por el famoso:**
+### Concepto de Diseño Arquitectónico
+
+El diseño arquitectónico en ingeniería de software es un proceso crítico que establece la estructura fundamental de los datos y los componentes de un programa necesario para construir un sistema basado en computadora. Este concepto no solo se enfoca en el hardware y software necesarios, sino también en cómo estos componentes interactúan entre sí y con el entorno del sistema para cumplir los requisitos específicos del proyecto. Aquí, se definen tanto la estructura como las propiedades de los componentes del sistema, así como las relaciones entre ellos.
+
+#### Pasos involucrados en el diseño arquitectónico:
+1. **Diseño de los datos:** Este paso implica definir cómo se organizarán y almacenarán los datos dentro del sistema. Se consideran aspectos como la estructura de las bases de datos, la interacción entre los datos, y cómo estos serán accesibles.
+
+2. **Obtención de representaciones de la estructura arquitectónica:** Aquí, el arquitecto de software o el equipo de desarrollo crea modelos o diagramas que representan la estructura del sistema. Esto incluye la delineación de componentes software, su distribución, y cómo se comunican entre sí.
+
+3. **Análisis de estilos o patrones arquitectónicos alternativos:** En este paso, se evalúan diferentes estilos arquitectónicos y patrones de diseño para determinar cuál se adapta mejor a los requerimientos del sistema. Los patrones como MVC (Modelo-Vista-Controlador) o microservicios pueden ser considerados dependiendo de la necesidad de escalabilidad, mantenibilidad y otros atributos de calidad del sistema.
+
+4. **Selección y elaboración de la arquitectura:** Una vez que se ha identificado el estilo o patrón más adecuado, se procede a desarrollar la arquitectura detalladamente utilizando el método de diseño seleccionado. Este es el paso final donde la arquitectura se formaliza y se prepara para la implementación.
+
+#### Importancia del diseño arquitectónico:
+El diseño arquitectónico es crucial porque establece una base sólida para el desarrollo del software. Proporciona una estructura clara que ayuda a organizar el código de manera lógica, facilita la prueba y el mantenimiento del sistema, y asegura que el sistema final sea robusto y escalable. Además, un buen diseño arquitectónico puede significar una mejor adaptabilidad a los cambios de requisitos y tecnología a lo largo del tiempo, lo que es esencial en el dinámico campo del desarrollo de software.
+
+### ¿Cómo se eligen las estructuras arquitectónicas?
+
+La elección de una estructura arquitectónica adecuada es un paso crucial para el éxito de cualquier proyecto de desarrollo de software. Este proceso no sólo afecta la funcionalidad y rendimiento del sistema final, sino también su capacidad para adaptarse a cambios futuros y la facilidad con la que puede ser mantenido y escalado. A continuación, se detalla cómo se lleva a cabo este proceso de selección:
+
+#### Pasos para elegir estructuras arquitectónicas:
+
+1. **Análisis del Contexto y el Problema:**
+   - Antes de seleccionar un patrón arquitectónico, es fundamental entender el contexto en el que operará el sistema y los problemas específicos que necesita resolver.
+   - Este análisis implica identificar y entender los requerimientos del usuario, las limitaciones del sistema, y los objetivos comerciales que el sistema debe alcanzar.
+
+2. **Evaluación de Patrones Arquitectónicos:**
+   - Basado en el análisis inicial, se evalúan diferentes patrones arquitectónicos que podrían ser adecuados. Esto incluye considerar patrones como Modelo-Vista-Controlador (MVC), arquitectura por capas, microservicios, entre otros.
+   - Cada patrón tiene sus fortalezas y debilidades que deben ser consideradas en relación con los requisitos y restricciones del proyecto.
+
+3. **Desarrollo de Criterios de Selección:**
+   - Se establecen criterios específicos para evaluar los patrones arquitectónicos. Estos criterios pueden incluir la escalabilidad, la facilidad de mantenimiento, la seguridad, y el costo de implementación.
+   - Los criterios deben reflejar las prioridades del proyecto y asegurar que la arquitectura seleccionada pueda soportar los aspectos más críticos del sistema.
+
+4. **Prueba y Simulación de Arquitecturas:**
+   - En algunos casos, se realizan pruebas o simulaciones para ver cómo diferentes estructuras arquitectónicas manejarían escenarios de uso real o hipotético.
+   - Estas pruebas ayudan a visualizar posibles problemas y evaluar la eficacia de diferentes arquitecturas bajo condiciones controladas.
+
+5. **Selección Final y Elaboración:**
+   - Con toda la información recopilada y las pruebas realizadas, se selecciona la estructura arquitectónica más adecuada.
+   - Una vez seleccionada, se procede a detallar y elaborar la arquitectura, integrando todos los componentes y sub-sistemas necesarios para cumplir con los requisitos del proyecto.
+
+#### Consideraciones Adicionales:
+
+- **Experiencia y Conocimiento del Equipo:**
+  - La familiaridad del equipo de desarrollo con un patrón arquitectónico específico puede influir en la elección, ya que un mayor conocimiento puede reducir los tiempos de desarrollo y aumentar la calidad del software.
+
+- **Criterios de Evaluación de Riesgos:**
+  - Además de los criterios técnicos y funcionales, los criterios de evaluación de riesgos también deben ser considerados para asegurar que la arquitectura pueda manejar situaciones adversas sin comprometer la integridad o disponibilidad del sistema.
+
+La elección de la estructura arquitectónica correcta es un proceso iterativo y deliberado que requiere un balance entre los requisitos técnicos, las capacidades del equipo, los costos y los riesgos potenciales. Asegurar una elección adecuada es fundamental para el éxito a largo plazo del proyecto de software.
+
+### ¿Qué son los patrones arquitectónicos?
+
+Los patrones arquitectónicos son esquemas de diseño que proporcionan una estructura organizativa sistemática para sistemas de software. Son esenciales para guiar la configuración de los componentes de software y su interacción, optimizando así la creación y el mantenimiento de sistemas complejos. Aquí se explica con más detalle qué son y cómo se categorizan:
+
+#### Definición de Patrones Arquitectónicos:
+- **Esquema Organizativo:** Los patrones arquitectónicos ofrecen un marco que define la disposición y la interacción de los componentes dentro de un sistema de software. Estos patrones ayudan a resolver problemas comunes de diseño al proporcionar soluciones probadas que mejoran la modularidad y la reusabilidad del software.
+- **Especificaciones de Responsabilidades:** Cada patrón define roles específicos para diferentes subsistemas o componentes, especificando cómo deben interactuar y cooperar para lograr un funcionamiento efectivo del sistema completo.
+- **Directrices de Organización:** Además de definir roles, los patrones arquitectónicos incluyen reglas y directrices sobre cómo deben organizarse las relaciones entre los distintos componentes, optimizando aspectos como el rendimiento, la seguridad y la escalabilidad.
+
+#### Categorías de Patrones Arquitectónicos:
+1. **From Mud to Structure (Del barro a la estructura):**
+   - Esta categoría incluye patrones que ayudan a estructurar sistemas desde un enfoque de alto nivel, proporcionando una descomposición controlada del sistema en tareas o funciones más pequeñas y gestionables.
+   - Ejemplos: Patrón de Capas, Tuberías y Filtros, y Pizarra.
+
+2. **Distributed Systems (Sistemas Distribuidos):**
+   - Incluye patrones que facilitan la creación de aplicaciones distribuidas donde los componentes están separados físicamente pero trabajan juntos para realizar tareas.
+   - Ejemplos: Broker, Microkernel y Tuberías y Filtros.
+
+3. **Sistemas Interactivos:**
+   - Estos patrones apoyan la estructuración de sistemas que requieren interacción humano-computadora intensiva.
+   - Ejemplos: Modelo-Vista-Controlador (MVC) y Presentación-Abstracción-Control.
+
+4. **Sistemas Adaptables:**
+   - Abarca patrones que permiten a los sistemas adaptarse y evolucionar fácilmente en respuesta a cambios en los requisitos tecnológicos o de negocio.
+   - Ejemplos: Reflexión y Microkernel.
+
+#### Importancia de los Patrones Arquitectónicos:
+- **Fundamentación de la Estructura:** Los patrones arquitectónicos proporcionan una base sobre la cual todas las actividades de desarrollo subsecuentes se construyen, garantizando que el diseño y la implementación del software sigan un marco coherente y bien organizado.
+- **Facilitación del Desarrollo y Mantenimiento:** Al adherirse a un patrón arquitectónico, los equipos de desarrollo pueden reducir la complejidad, facilitar la integración de nuevos desarrolladores y mejorar la mantenibilidad del software.
+- **Adaptación y Extensión:** Los patrones permiten que los sistemas sean más adaptativos y extensibles, facilitando la incorporación de nuevas características y la adaptación a nuevas tecnologías sin requerir una revisión completa del sistema.
+### ¿Qué tipos de arquitecturas existen?
+
+En el desarrollo de sistemas de software, existen varios patrones arquitectónicos diseñados para abordar diferentes necesidades y problemas de diseño. Cada patrón ofrece un enfoque único para estructurar aplicaciones, permitiendo a los desarrolladores optimizar el rendimiento, la mantenibilidad y la escalabilidad del software. A continuación, se exploran algunos de los tipos más comunes de arquitecturas y su aplicación práctica:
+
+#### Tipos Principales de Arquitecturas de Software:
+
+1. **Arquitectura por Capas (Layered Architecture):**
+   - **Descripción:** Divide la aplicación en capas lógicas, cada una con una responsabilidad específica. Comúnmente, estas capas incluyen presentación, lógica de negocios, y acceso a datos.
+   - **Aplicación:** Es ideal para aplicaciones empresariales donde la separación de la lógica de negocios y la interfaz de usuario es crucial. Ejemplo destacado: el modelo TCP/IP en redes.
+
+2. **Arquitectura de Tuberías y Filtros (Pipes and Filters):**
+   - **Descripción:** Consiste en una serie de procesamiento (filtros) conectados por canales (tuberías) que pasan los datos de un filtro a otro.
+   - **Aplicación:** Utilizado en sistemas que necesitan procesar un flujo de datos de manera secuencial. Ejemplos incluyen compiladores e intérpretes.
+
+3. **Arquitectura Blackboard:**
+   - **Descripción:** Utiliza un repositorio central o "pizarra" donde varios subsistemas colaboran para construir una solución a un problema complejo.
+   - **Aplicación:** Adecuada para problemas donde no existe una estrategia determinista clara, como en el reconocimiento de patrones y la inteligencia artificial.
+
+4. **Arquitectura Broker:**
+   - **Descripción:** Centraliza el control y la coordinación de la distribución de servicios entre distintos componentes, que interactúan a través de un mediador o "broker".
+   - **Aplicación:** Eficiente para sistemas distribuidos donde componentes separados necesitan comunicarse de forma transparente, como en arquitecturas orientadas a servicios (SOA).
+
+5. **Arquitectura Modelo-Vista-Controlador (MVC):**
+   - **Descripción:** Separa la lógica del programa en tres elementos interconectados: modelo (gestión de datos), vista (interfaz de usuario), y controlador (intermediario entre modelo y vista).
+   - **Aplicación:** Extensamente usada en aplicaciones web y móviles para separar la gestión de datos de la interfaz de usuario, facilitando la mantenibilidad y la escalabilidad.
+
+6. **Arquitectura Presentación-Abstracción-Control (PAC):**
+   - **Descripción:** Define una estructura de agentes cooperativos, donde cada agente maneja un aspecto específico de la funcionalidad de la aplicación, dividiendo su estructura en presentación, abstracción y control.
+   - **Aplicación:** Ideal para sistemas interactivos complejos que requieren una organización modular de la interfaz de usuario.
+
+7. **Arquitectura de Microkernel:**
+   - **Descripción:** Separa un núcleo funcional mínimo de funcionalidades extendidas y clientes específicos, facilitando la extensión y el mantenimiento del sistema.
+   - **Aplicación:** Utilizado en sistemas operativos y aplicaciones donde la flexibilidad para añadir nuevas capacidades es crucial.
+
+8. **Arquitectura de Reflexión:**
+   - **Descripción:** Permite a un sistema examinarse y modificar su propia estructura y comportamiento dinámicamente.
+   - **Aplicación:** Usado en entornos que necesitan una alta adaptabilidad a cambios en tiempo de ejecución, como en sistemas altamente configurables.
+
+Estos patrones arquitectónicos proporcionan un marco de referencia para diseñadores y desarrolladores, permitiendo la creación de sistemas de software que son robustos, eficientes y fáciles de mantener. Cada patrón tiene su lugar y utilidad en determinadas situaciones, y entender sus fortalezas y limitaciones es clave para implementar la solución más efectiva.
