Marge de lo de la wiki con lo que habia y mas mejoras de redacción | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -66,7 +66,7 @@ La Gestión de Requerimientos implica la recolección, almacenamiento y mantenim
 
 ## Requerimientos y Restricciones
 
- Los requerimientos de un sistema se pueden dividir en requerimientos funcionales y no funcionales. Los ***requerimientos funcionales*** describen una interacción entre el sistema y su ambiente, describen cómo debe comportarse el sistema ante determinado estímulo, es decir, describen lo que el sistema debe hacer. Los ***requerimientos no funcionales***, por su parte, ponen límites y restricciones al sistema, y apoyando las funcionalidades, son las propiedades o características que el producto debe tener, por ejemplo, Apariencia y sensación, Usabilidad, Performance, Operatividad, entre otras.
+ Los requerimientos de un sistema se pueden dividir en requerimientos funcionales y no funcionales. Los ***requerimientos funcionales*** describen las interacciones entre el sistema y su ambiente, describen cómo debe comportarse el sistema ante determinado estímulo, es decir, describen lo que el sistema debe hacer. Por otro lado, los ***requerimientos no funcionales***, establecen límites y restricciones al sistema, apoyando las funcionalidades de este mismo. Son las propiedades o características que el producto debe tener, por ejemplo, Apariencia y sensación, Usabilidad, Performance, Operatividad, entre otras.
 
 #### Restricciones Globales
 
