--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -1,4 +1,4 @@
-La utilización de metodologías para el desarrollo de aplicaciones es casi imposible de omitir en la actualidad, debido a la gran necesidad de control de variables que conlleva el mismo desarrollo, y para la ordenada elaboración de las aplicaciones, por lo tanto, seguir una metodología y estándares nos llevan a estar en competitividad en todo momento. Las metodologías, los estándares y las herramientas siguen un único propósito, el cual consiste en la elaboración de aplicaciones de manera eficiente, ordenada y con el menor número de defectos.
+Hoy en día, es prácticamente indispensable utilizar metodologías para el desarrollo de aplicaciones debido a la necesidad de controlar variables durante su elaboración. Seguir una metodología y estándares permite mantener la competitividad, facilitando el desarrollo de aplicaciones de manera eficiente, ordenada y con el mínimo número de defectos.
 En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un ***caso de desarrollo*** para el proyecto específico, elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto, ya que cada proyecto es diferente y posee características particulares.
 El principal objetivo de esta metodología es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos.
 ### Dimensiones del Modelo
@@ -7,7 +7,7 @@ El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra lo
 
 ![[dimensiones_RUP.png]]
 
-En la figura se puede observar como varía el énfasis de cada disciplina en un cierto plazo en el tiempo, y durante cada una de las fases. Por ejemplo, en iteraciones tempranas, pasamos más tiempo en requerimientos, y en las últimas iteraciones pasamos más tiempo en poner en práctica la realización del proyecto en sí. 
+Como se puede observar en la imagen, el énfasis de cada disciplina varia de acuerdo a los plazo de tiempo y de la fases de desarrollo en la que se encuentre.
 RUP proporciona una serie de disciplinas que guían el proceso de documentación e implementación, asimismo cuenta con guías para un buen desarrollo, todo ellas dentro de las respectivas fases con las cuales cuenta.
 
 | Flujos de Trabajo                      | Tareas a Realizar                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
@@ -48,7 +48,6 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 
 ![[ciclo_vida_RUP2.png]]
 
-
 1. **Inicio**: Se define el ámbito y objetivos del proyecto, al igual que la funcionalidad y capacidades del producto.
 2. **Elaboración**: Tanto la funcionalidad como el dominio del problema se estudian en profundidad. Se definen los casos de usos principales, la arquitectura básica del sistema y se planifica el proyecto considerando recursos disponibles.
 3. **Construcción**: El producto se desarrolla a través de iteraciones donde cada iteración involucra tareas de análisis, diseño e implementación de los modelos del sistema. En esta fase se refina la arquitectura, permitiendo cambios en la estructura del programa. Gran parte del trabajo es programación y pruebas, aunque también se documenta tanto el sistema construido como el manejo del mismo. El resultado de esta fase es un producto funcional junto con la documentación.
@@ -68,4 +67,3 @@ Es importante reconocer que puede haber solapamientos entre las fases, especialm
 >	- El modelado genera mucho trabajo adicional. 
 >	- Genera muchos costos.
 >	- No recomendable para proyectos pequeños.
-
