--- a/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
@@ -15,10 +15,12 @@ Cuando más grande y complejo es el sistema, el modelado se hace más importante
 
 ### Lenguaje Unificado de Modelado (UML)
 
-El que es UML, para qué sirve, sumado a todas sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante es que UML no es una metodología, más bien es un metalenguaje independiente de la metodología empleada y del lenguaje de programación en el que se realice la implementación.
+El que es UML, para qué sirve, sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante a saber es que UML no es una metodología, más bien es un metalenguaje independiente de la metodología empleada y del lenguaje de programación en el que se realice la implementación.
 El modelo UML consta de 5 tipos de vistas y 9 tipos de diagramas, estos diagramas expresan gráficamente partes de un modelo.
 
 ![[diagramas_uml.png]]
+
 La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un sistema, pero no dice como implementar esté mismo.
 La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares y diferentes puntos de vistas del sistema, en sí el objetivo es satisfacer a cada persona involucrada. Recordemos que nuestro proceso para desarrollar software consiste de los siguientes pasos.
+
 ![[proceso-desarrollo.png]]
