Formateo | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -1,5 +1,5 @@
 Hoy en día, es prácticamente indispensable utilizar metodologías para el desarrollo de aplicaciones debido a la necesidad de controlar variables durante su elaboración. Seguir una metodología y estándares permite mantener la competitividad, facilitando el desarrollo de aplicaciones de manera eficiente, ordenada y con el mínimo número de defectos.
-En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un ***caso de desarrollo*** para el proyecto específico, elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto, ya que cada proyecto es diferente y posee características particulares.
+En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un ***caso de desarrollo*** para el proyecto, elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto, ya que cada proyecto es diferente y posee características particulares.
 El principal objetivo de esta metodología es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos.
 ### Dimensiones del Modelo
 
