Comodando y dejando todo prolijo

--- a/4º Año/Metodologia de Sistemas II/Unidad 1/1. Procesos de Software.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 1/1. Procesos de Software.md
@@ -5,12 +5,12 @@
 >- **Notación**: Conjunto de reglas gráficas o textuales para la representación de un modelo.
 >- **Metodología**: Colección de métodos para resolver un tipo de problemas. Descompone el proceso de desarrollo en actividades y proporciona los métodos adecuados para llevar a cabo dichas actividades.
 
-La definición de lo que es un proceso en el campo de la ingeniería de software, es algo complejo, ya que dependiendo del autor tendremos un tipo de definición u otra. Pero según Somerville, un proceso de software es una serie de actividades relacionadas que conducen a la elaboración de un producto de software. Este autor también habla de una serie de actividades fundamentales que todo proceso de software debe tener:
+La definición de lo que es un proceso en el campo de la ingeniería de software, es algo complejo, ya que dependiendo del autor tendremos una definición u otra. Pero según Somerville, un proceso de software es una serie de actividades relacionadas que conducen a la elaboración de un producto de software. Este autor también habla de una serie de actividades fundamentales que todo proceso de software debe tener:
 
 - **Especificación del software**: Tienen que definirse tanto la funcionalidad del software como las restricciones de su operación.
 - **Diseño e implementación del software**: Debe desarrollarse el software para cumplir con las especificaciones.
 - **Validación del software**: Hay que validar el software para asegurarse de que cumple lo que el cliente quiere.
-- **Evolución del software**: El software tiene que evolucionar para satisfacer las necesidades cambiantes del cliente,
+- **Evolución del software**: El software tiene que evolucionar para satisfacer las necesidades cambiantes del cliente.
 
 Un buen proceso de software debe especificar ***la secuencia de actividades a realizar*** por el equipo de desarrollo, es decir, su flujo de actividades. ***Los productos*** que deben crearse, ya sea resultado de una actividad de desarrollo o del diseño de una arquitectura específica. ***La asignación de tareas*** a los miembros del equipo, como así también roles y responsabilidad dentro del grupo de trabajo. Y por último ***los criterios para controlar el proceso***, estableciendo hitos (Acontecimientos puntuales y significativos) y una serie de controles que ayuden a realizar la gestión de los proyectos de software. Los procesos de software son muy importantes, ya que nos ayuda a:
 
@@ -23,6 +23,6 @@ Un buen proceso de software debe especificar ***la secuencia de actividades a re
 - Gestiona el cambio adecuadamente.
 - Asegura la calidad.
 
-Cuando un proceso se implica a la construcción de algún producto, suele referirse al proceso como un [[1. Modelos de Ciclo de Vida|Ciclo de Vida]]. Los proyectos de software se desarrollan en una serie de ***fases***, que van desde la *concepción del software* y su desarrollo inicial hasta su *puesta en funcionamiento* y posterior retirada por otra nueva generación de software.
-En este contexto, un ***modelo de proceso software*** es una representación abstracta y simplificada de un proceso de software, los cuales ofrecen un marco de definición para el proceso, pero no detallan las actividades específicas. Cabe aclarar que no son descripciones definitivas de un proceso de software, más bien una abstracción útil que puede servir a la hora de desarrollar software.
+Cuando un proceso en particular se implica a la construcción de algún producto, nos solemos referir a este proceso como [[1. Modelos de Ciclo de Vida|Ciclo de Vida]]. Los proyectos de software se desarrollan en una serie de ***fases***, que van desde la *concepción del software* y su desarrollo inicial hasta su *puesta en funcionamiento* y posterior retirada por otra nueva generación de software.
+En este contexto, un ***modelo de proceso software*** es una representación abstracta y simplificada de un proceso de software, los cuales ofrecen un marco de definición para el proceso, pero no detallan las actividades específicas. Estos modelos no son descripciones definitivas de un proceso de software, más bien una abstracción útil que puede servir a la hora de desarrollar software.
 A lo largo de los años surgieron diversos [[2. Tipos de Modelos de Ciclo de Vida|Modelos de Ciclo de Vida]], los cuales plantean diferentes enfoques a la hora de desarrollar software y de llevar adelante el desarrollo de un programa.
