diagrama de colaboraciones

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
@@ -59,3 +59,5 @@ Los diagramas de interacción describen cómo grupos de objetos colaboran en com
 Un diagrama de secuencia captura el comportamiento de un escenario único, mostrando una serie de objetos y los mensajes que se intercambian entre ellos dentro de un caso de uso. Este diagrama es excelente para visualizar las interacciones y procesamientos que realizan los participantes.
 Los diagramas de secuencia son ideales cuando se desea examinar el comportamiento de varios objetos dentro de un único caso de uso. Son efectivos para mostrar la colaboración entre objetos, aunque no son tan precisos en definir comportamientos detallados. Si buscas analizar el comportamiento de un solo objeto a través de varios casos de uso, es recomendable utilizar un diagrama de estado. Para explorar comportamientos a través de múltiples casos de uso o varios hilos, considera usar un diagrama de actividad.
 Otras formas útiles de los diagramas de interacción incluyen los diagramas de comunicación, que muestran las conexiones, y los diagramas de tiempo, que representan restricciones temporales.
+### Diagrama de Colaboraciones
+Este texto no corresponde a un diagrama oficial en UML 2. UML sugiere que se puede usar la notación de "colaboración ocurrencia" para mostrar el uso de patrones, aunque casi ningún autor de patrones ha adoptado este enfoque. Las colaboraciones han existido desde UML 1, pero debo admitir que raramente las he utilizado, incluso al escribir patrones. Las colaboraciones ofrecen una manera de agrupar trozos de comportamiento interactivo cuando diferentes clases desempeñan roles específicos. Sin embargo, en la práctica, no he encontrado que sean un tipo de diagrama particularmente convincente.
