--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
@@ -61,3 +61,15 @@ Los diagramas de secuencia son ideales cuando se desea examinar el comportamient
 Otras formas útiles de los diagramas de interacción incluyen los diagramas de comunicación, que muestran las conexiones, y los diagramas de tiempo, que representan restricciones temporales.
 ### Diagrama de Colaboraciones
 Este texto no corresponde a un diagrama oficial en UML 2. UML sugiere que se puede usar la notación de "colaboración ocurrencia" para mostrar el uso de patrones, aunque casi ningún autor de patrones ha adoptado este enfoque. Las colaboraciones han existido desde UML 1, pero debo admitir que raramente las he utilizado, incluso al escribir patrones. Las colaboraciones ofrecen una manera de agrupar trozos de comportamiento interactivo cuando diferentes clases desempeñan roles específicos. Sin embargo, en la práctica, no he encontrado que sean un tipo de diagrama particularmente convincente.
+
+### Diagrama de estado
+
+Los diagramas de máquina de estados son una técnica consolidada para describir el comportamiento de un sistema. Diversas formas de diagramas de estado han existido desde la década de 1960, y los enfoques orientados a objetos los han adoptado para mostrar el comportamiento de objetos individuales. En estos enfoques, se dibuja un diagrama de máquina de estado para una sola clase para mostrar el comportamiento a lo largo de toda la vida de un objeto.
+
+Cuando los desarrolladores hablan de "estados" de objetos, a menudo se refieren a la situación de los objetos en términos de la combinación de todos los datos en los campos de los objetos. Sin embargo, el "estado" en un diagrama de máquina de estado representa una noción más abstracta; diferentes estados implican diferentes maneras de reaccionar a los eventos.
+
+Los diagramas de estado son efectivos para describir el comportamiento de un objeto a través de varios casos de uso. No obstante, no son muy buenos para describir comportamientos que involucran a una serie de objetos colaborando. Por lo tanto, es útil combinar los diagramas de estado con otras técnicas. Por ejemplo, los diagramas de interacción son útiles para describir el comportamiento de varios objetos en un solo caso de uso, y los diagramas de actividad son adecuados para mostrar la secuencia general de actividades de varios objetos y casos de uso.
+
+No todos encuentran los diagramas de estado intuitivos. Es importante observar cómo las personas interactúan con ellos. Puede ser que en su equipo no encuentren útiles los diagramas de estado para su forma de trabajar. Esto no representa un gran problema; como siempre, es esencial utilizar la combinación de técnicas que mejor se adapte a sus necesidades.
+
+Si decide utilizar diagramas de estado, evite hacerlo para cada clase en el sistema. Aunque este enfoque es frecuentemente adoptado por aquellos que prefieren un alto nivel de detalle, generalmente resulta en una pérdida de esfuerzo. Utilice diagramas de estado sólo para aquellas clases que muestran un comportamiento interesante y cuya representación en un diagrama de estado contribuya a entender mejor lo que está sucediendo. Muchas personas descubren que los objetos de interfaz de usuario y control son especialmente aptos para ser representados con un diagrama de estado.
