Correcciones de redacción y formateo v2 | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
@@ -9,13 +9,13 @@ El diseño arquitectónico se interesa en comprender la organización óptima de
 >3. **Análisis de estilos o patrones arquitectónicos alternativos:** Se evalúan diferentes estilos arquitectónicos y patrones de diseño para determinar cuál se adapta mejor a los requerimientos del sistema.
 >4. **Selección y elaboración de la arquitectura:** Una vez que se ha identificado el estilo o patrón más adecuado, se procede a desarrollar la arquitectura detalladamente utilizando el método de diseño seleccionado. Este es el paso final donde la arquitectura se formaliza y se prepara para la implementación.
 
-El diseño arquitectónico es crucial, ya que establece una base sólida para el desarrollo, proporcionando una estructura clara que ayuda a organizar el código de manera lógica, facilita la prueba, el mantenimiento del sistema, y asegura que el sistema final sea robusto y escalable. Además, un buen diseño arquitectónico puede significar una mejor adaptabilidad a los cambios de requisitos y tecnología a lo largo del tiempo, lo que es esencial en el dinámico campo del desarrollo de software.
+El diseño arquitectónico es crucial, ya que establece una base sólida para el desarrollo, proporcionando una estructura clara que ayuda a organizar el código de manera lógica, facilita la prueba, el mantenimiento del sistema, y asegura que el sistema final sea robusto y escalable. Además, un buen diseño arquitectónico puede significar una mejor adaptabilidad a los cambios de requisitos y tecnología a lo largo del tiempo.
 
 ### Decisiones en el Diseño Arquitectónico
 
 Es importante recordar que el diseño arquitectónico es un proceso mediante el cual se configura la estructura de un sistema para satisfacer tanto los requisitos funcionales como los no funcionales. A lo largo de este proceso, los arquitectos del sistema enfrentan decisiones estructurales clave que incluyen la selección de modelos genéricos de resolución, los patrones de diseño a implementar, el enfoque predominante de la estructura, y las estrategias para gestionar el comportamiento de los componentes. También deben determinar cómo se documentará la arquitectura, entre otros aspectos fundamentales.
-Para poder elegir la estructura arquitectónica que seguirá un proyecto, los diseñadores del sistema deben prestar atención en los requerimientos no funcionales que afectan directamente al sistema, ya que la estructura arquitectónica se enfocan en la solución de ciertos requerimientos tales como la seguridad, o la mantenibilidad. En este contexto la arquitectura de un sistema de software puede basarse en un ***patrón arquitectónico*** particular. Un patrón arquitectónico es una descripción de una organización del sistema, captando la esencia de una arquitectura que se usó en diferentes sistemas de software.
-Los siguientes requisitos no funcionales que pueden influir en la elección de un patrón arquitectónico específico:
+Para poder elegir la estructura arquitectónica que seguirá un proyecto, los diseñadores del sistema deben prestar atención en los requerimientos no funcionales que afectan directamente al sistema, ya que la estructura arquitectónica se enfocan en la solución de ciertos requerimientos tales como la seguridad, o la mantenibilidad. En este contexto, la arquitectura de un sistema de software puede basarse en un ***patrón arquitectónico*** particular. Un patrón arquitectónico es una descripción de una organización del sistema, captando la esencia de una arquitectura que se usó en diferentes sistemas de software.
+Los siguientes requisitos no funcionales pueden influir en la elección de un patrón arquitectónico específico:
 
 - **Rendimiento**: Si el rendimiento es un requerimiento crítico, la arquitectura debe diseñarse para realizar operaciones críticas dentro de un pequeño número de componentes, con todos estos componentes desplegados en la misma computadora en vez de distribuirlos por la red.
 - **Seguridad**: Si la seguridad es un requerimiento crítico, será necesario usar una estructura en capas, con los activos más críticos protegidos en las capas más internas, y con un alto nivel de validación de seguridad aplicado a dichas capas.
@@ -23,7 +23,7 @@ Los siguientes requisitos no funcionales que pueden influir en la elección de u
 - **Disponibilidad**: Si la disponibilidad es un requerimiento crítico, la arquitectura tiene que diseñarse para incluir componentes redundantes, de manera que sea posible sustituir y actualizar componentes sin detener el sistema.
 - **Mantenibilidad**: Si la mantenibilidad es un requisito fundamental, la arquitectura del sistema debe diseñarse utilizando componentes independientes y con un bajo acoplamiento, de modo que puedan modificarse fácilmente. Los productores de datos deben estar separados de los consumidores, y se debe evitar el uso compartido de estructuras de datos.
 
-Cabe recalcar que la familiaridad del equipo de desarrollo con un patrón arquitectónico puede influir en la elección, ya que un mayor conocimiento puede agilizar el desarrollo y mejorar la calidad del software. También es crucial considerar los criterios de evaluación de riesgos para asegurar que la arquitectura resista situaciones adversas sin afectar la integridad o disponibilidad del sistema.
+Cabe recalcar que la familiaridad del equipo de desarrollo con un patrón arquitectónico puede influir en la elección, ya que un mayor conocimiento puede agilizar el desarrollo y mejorar la calidad del software. También es crucial considerar los riesgos para asegurar que la arquitectura resista situaciones adversas sin afectar la integridad o disponibilidad del sistema.
 En resumen, seleccionar la estructura arquitectónica adecuada es un proceso iterativo que requiere equilibrar los requisitos técnicos, las habilidades del equipo, los costos y los riesgos.
 ## Patrones Arquitectónicos
 
@@ -32,7 +32,7 @@ Los patrones arquitectónicos son esquemas de diseño que proporcionan una estru
 El patrón más conocido en la actualidad es el ***MVC*** (Model-View-Controller), el cual se utiliza para el manejo de los sistemas basados en la web. A su vez existen muchos otros patrones arquitectónicos, tales como la arquitectura basada en capas, cliente-servidor, basada en repositorios, entre otros. A grandes rasgos los patrones arquitectónico se pueden clasificar en 4 grandes categorías:
 
 - **From Mud to Structure**: Los patrones en esta categoría en particular, apoyan una descomposición controlada de la tarea general del sistema en subtareas cooperativas. Esta categoría incluye el patrón por capas, el patrón tuberías y filtros y el patrón de pizarra.
-- **Sistemas Distribuidos**: Esta categoría incluye al patrón Broker, y se refiere a dos patrones en otras categorías como lo son Microkernel y tuberías y filtros. El patrón Broker proporciona una infraestructura completa para aplicaciones distribuidas. Los patrones Microkernel y Tuberías y Filtros solo consideran la distribución como una preocupación secundaria y, por lo tanto, se listan bajo sus respectivas categorías principales.
+- **Sistemas Distribuidos**: Esta categoría incluye al patrón Broker, este patrón proporciona una infraestructura completa para aplicaciones distribuidas, actuando como intermediario entre los diferentes recursos y los clientes que solicitan esos recursos.
 - **Sistemas Interactivos**: Esta categoría comprende dos patrones principales el patrón Modelo-Vista-Controlador (MVC) y el patrón Presentación-Abstracción-Control (PAC). Ambos apoyan la estructuración de sistemas de software que presentan interacción humano-computadora.
 - **Sistemas Adaptables**: El patrón Reflexión y el patrón Microkernel apoyan fuertemente la extensión de aplicaciones y su adaptación a la evolución de la tecnología y los requisitos funcionales cambiantes.
 
